Projet GL/Projet_GL/src/test/deca/context/valid/increment2/read-int.deca
// Test simple readInt

//Historique : cree le 11/01/2023

{
    int a;

     a = readInt();
}