Projet GL/Projet_GL/src/test/deca/context/invalid/increment1/assign-incompatible.deca
// Test int := bool

//test rule (3.28)

// Raison : Typage incompatibles

// Résultats : Ligne 14 "types incompatibles"

// Historique :
//  cree le 05/01/2023

{
    int a;
    boolean b;

    //Must be refused
    a = b;
}